--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,9 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
             try {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
+                    request_json = JSON.parse(xhr.responseText);
                     //XXX: Pass the data to the callback!
+                    callback(request_json);
                 }
             } 
             catch(e) {
@@ -48,8 +50,12 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
         }
     };
     //XXX: POST to a URL
+    xhr.open("POST", url, true);
     //XXX: set the mimetype and the accept headers!
     // Remember to use application/json !
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.setRequestHeader("Accept", "application/json");
+    xhr.send(JSON.stringify(objects));
 }
 
 
@@ -65,7 +71,7 @@ function drawCircle(context,entity) {
         //moveTo(x,y);
         fillStyle = entity["colour"];
         strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
+        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);
         stroke();                                
     }
 }
@@ -137,7 +143,11 @@ function getPosition(e) {
 function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
+    //window.location.host
     //XXX: Send a XHTML Request that updates the entity you just  modified!
+    var newUrl = 'http://' + host + '/entity' + entity;
+    sendJSONXMLHTTPRequest(newUrl, data, function(){})
+    //check what call back is 
 
 }
 
@@ -262,7 +272,13 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
-    drawFrame();
+    function callback(world){
+        drawNextFrame();
+        drawFrame(); 
+    }
+    var updateUrl = 'http://' + host + '/world';
+    objects = null;
+    sendJSONXMLHTTPRequest(updateUrl,objects, callback);
 }
 
 // 30 frames per second
